--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
 body{
   background-color: cadetblue;
+  font-family: 'Courier New', Courier, monospace;
+}
+.intro{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-shadow: 2px 2px 5px red;
+  text-align: center;
+  border-bottom: darkcyan solid;
+}
+#explain{
+  display: none;
+  border-style: solid;
+  border-color: red;
+  border-width: 1px;
+  background-color: darkorange;
+  cursor: pointer;
+
+}
+canvas{
+  border-style: solid;
+  border-color: red;
+  border-width: 1px;
+  width: 99%;
+  margin: auto;
+}
+.can{
+  width: 50%;
+  float: left;
+  display: inline;
+}
+input{
+  border-radius: 4px;
+}
+article{
+  width: 98%;
+  border-style: solid;
+  border-width:1px;
+  border-color: yellow;
+  font-weight: bolder;
+}
+.added_wave{
+  margin: 4px;
+  border-bottom-style: solid;
+  border-bottom-color: #000;
+  border-bottom-width: 1px;
+  color: #000;
+  font-family: Georgia
+}
+.added_wave input{
+  border-radius: 6px;
+  margin-top:4px;
+  margin-bottom:2px;
+  margin-right:6px;
 }
